# vsbTech2

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  STYLE_GUIDE.md  setup.cmake
samples/: CMakeLists.txt
samples/flying_circles/: CMakeLists.txt
samples/flying_circles/src/: basic_allocator.h  basic_memory_pool.h  flying_circle.cpp  flying_circle.h  flying_circles_main.cpp  flying_circles_settings.h  flying_circles_shaders.h  flying_circles_utils.cpp  flying_circles_utils.h
sandbox/: CMakeLists.txt
sandbox/basic/: sandbox_basic01.cpp  sandbox_basic02_hashes.cpp  sandbox_basic03_memoryalloc.cpp  sandbox_basic04_inplace_containers.cpp  sandbox_basic05_object_registry.cpp  sandbox_basic06_delegates.cpp  sandbox_basic07_mult_inheritance.cpp  sandbox_basic08_debug_view.cpp
tests/: CMakeLists.txt  main.cpp
tests/base/: tests_hash.cpp
tests/containers/: tests_array.cpp
tests/objects/: tests_single_instance_objects.cpp  tests_singletons.cpp
tests/strings/: tests_string_id.cpp
vsbBase/: CMakeLists.txt
vsbBase/vsb/: debug.cpp  debug.h  delegate.h  hash.h  log.cpp  log.h  types.h  utils.h  vsb.h  vsb_init.cpp  vsb_settings.h
vsbBase/vsb/containers/: array.h  container_defs.cpp  container_defs.h  container_utils.h  fixed_array.h  inplace_array.h  inplace_stack.h  vsb_set.h  vsb_stack.h  vsb_vector.h
vsbBase/vsb/memory/: allocation_strategy.h  memory.cpp  memory.h  single_threaded_allocator.h  single_threaded_pool.h
vsbBase/vsb/meta/: virtual_inheritance.h
vsbBase/vsb/objects/: destruction_central.cpp  destruction_central.h  hnd.h  managed_object.h  object.cpp  object.h  ptr.h  safe_ptr.h  single_instance_object.h  singleton.cpp  singleton.h  standalone_singleton.h
vsbBase/vsb/objects/internal/: handle.cpp  handle.h  object_registry.cpp  object_registry.h
vsbBase/vsb/strings/: static_string_id.h  string_id.cpp  string_id.h
vsbBase/vsb/strings/internal/: string_ids_registry.cpp  string_ids_registry.h
